neutron (2:8.0.0~b2-4) UNRELEASED; urgency=medium

  * Added a neutron-sriov-agent package.

 -- Thomas Goirand <zigo@debian.org>  Fri, 26 Feb 2016 21:53:13 +0800

neutron (2:8.0.0~b2-3) experimental; urgency=medium

  * Bumped EPOCH to align with Ubuntu.
  * Allow unit test to fail, because they do in Trusty.
  * Do not -X/usr/bin when calling dh_install.
  * Fixed auth_protocol to be http and not https by default.
  * Drop Provides: argparse (Closes: #810728).
  * neutron-linuxbridge-agent Breaks + Replaes older neutron-common
    (Closes: #813068).
  * New pt_BR.po debconf translation (Closes: #811530).

 -- Thomas Goirand <zigo@debian.org>  Thu, 28 Jan 2016 07:34:12 +0000

neutron (1:8.0.0~b2-2) experimental; urgency=medium

  * Fixed config file generation.

 -- Thomas Goirand <zigo@debian.org>  Thu, 21 Jan 2016 15:23:22 +0000

neutron (1:8.0.0~b2-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depeneds for this release.
  * Rebased better-config-defaults.patch.
  * Added extend-diff-ignore = "^[^/]*[.]egg-info/" in d/source/options.
  * Did some cleanups in debian/rules.
  * Using oslo-config-generator to generate config files, as upstream moved to
    use that as well.
  * export OSLO_PACKAGE_VERSION now compatible with Trusty version of dpkg.
  * Fixed debian/copyright.
  * Fixed too long lines in long description.
  * Removed all shlibs:Depends from debian/control.
  * Removed neutron-common.links (for symlink to /var/lib/quantum).
  * Fails build on unit test failures.

 -- Thomas Goirand <zigo@debian.org>  Fri, 04 Dec 2015 09:03:42 +0100

neutron (1:7.0.0-2) unstable; urgency=medium

  * Delete openvswitch_agent.ini on purge (Closes: #802538).

 -- Thomas Goirand <zigo@debian.org>  Fri, 23 Oct 2015 12:25:25 +0200

neutron (1:7.0.0-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Added python-pymysql as runtime dependency.
