@@ -21,4 +21,4 @@ CONFIG_FILE=/etc/neutron/plugins/ml2/openvswitch_agent.ini
 # Since Juno OVS plugin as been deprecated as core_plugin, it has been
 # replaced by ml2 as core_plugin and ovs as agent. Making ml2 mandatory
 # to use this agent
-DAEMON_ARGS="--config-file=/etc/neutron/neutron.conf --config-file=/etc/neutron/plugins/ml2/ml2_conf.ini"
+DAEMON_ARGS="--config-file=/etc/neutron/neutron.conf --config-file=/etc/neutron/plugins/ml2/openvswitch_agent.ini"
